@@ -1,3 +1,7 @@
+2012-07-20  Sam Steingold  <sds@gnu.org>
+	* lisp/bbdb-com.el (bbdb-message-search): Allow args name or mail
+	to be nil.
+
 2012-07-19  Roland Winkler  <winkler@gnu.org>
 	* lisp/bbdb.el: Simplify previous patch.
 	(bbdb-electric-execute, bbdb-electric-quit, bbdb-electric-quit):
